additional adjustments to support FastBoot.  FastBoot now runs without errors.  Note: wormhole content does not load in FastBoot to prevent content jumping about.
Also added localization support for unknown fields on the result page.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -189,8 +189,7 @@ dl{
   dt::after{content: ":";}
   dd{
     margin: 0 0 0 ($margin-wide);
-    &:empty:before{
-      content: '(unknown)';
+    .unknown{
       color: $text-muted;
       font-style: italic;
     }
